Describe OpenSZZ results reproduction