@@ -20,6 +20,9 @@ sudo apt-get install python3
 ```
 
 ## Steps to reproduce
+
+### SZZUnleashed with and without improvements
+
 On windows replace python3 with python and pip3 with pip
 
 Prepare szz
@@ -58,7 +61,40 @@ Get results
 ```
 python3 ../PBR20M1/Scripts/measurePos.py --repoName="commons-lang"
 ```
-Or for OpenSZZ
-```
-python3 ../PBR20M1/Scripts/openSzzAcc.py --repoName="commons-lang"
-```
+
+### OpenSZZ
+
+#### Requirements
+
+The following software is required:
+
++ docker
++ docker-compose
+
+#### Usage
+
+1. Clone the [OpenSZZ repo](https://github.com/clowee/OpenSZZ-Cloud-Native).
+2. Publication was prepared on version `533b4911710753e76c78c02c02ca10707a74e05b`. Make sure the correct version is used.
+3. Increase the heap size by adding the `JVM_OPTS` environmental variable to the `web` service in the `docker-compose.yml` file. Note that using docker on windows or linux might require increasing the total memory assigned to docker in the docker settings. Example:
+
+    ```yaml
+        web:
+            build: ./core
+            ports:
+            - "${PORTRANGE_FROM}-${PORTRANGE_TO}:8080"
+            networks:
+            - spring-cloud-network
+            depends_on:
+            - rabbitmq
+            volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            environment:
+            - JVM_OPTS=-Xmx12g -Xms12g -XX:MaxPermSize=1024m
+    ```
+
+4. Follow the [OpenSZZ readme file](https://github.com/clowee/OpenSZZ-Cloud-Native) for instructions on starting the application and running repositories.
+5. Analyse results
+
+    ```bash
+    python3 ../PBR20M1/Scripts/openSzzAcc.py --repoName="commons-lang"
+    ```
